--- a/src/components/Layout/styles/tailwind.css
+++ b/src/components/Layout/styles/tailwind.css
@@ -3,3 +3,11 @@
 @tailwind components;
 
 @tailwind utilities;
+
+html {
+  overflow-y: inherit !important;
+}
+
+body {
+  font-size: 16px !important;
+}
