--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,8 +1,4 @@
-@import './styles/layout.css';
-@import './styles/basic.css';
-@import './styles/main.css';
-@import './styles/custom.css';
-
-button {
-  color: green;
-}
+//@import './styles/layout.css';
+//@import './styles/basic.css';
+//@import './styles/main.css';
+//@import './styles/custom.css';
