--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,3 +2,25 @@
 //@import './styles/basic.css';
 //@import './styles/main.css';
 //@import './styles/custom.css';
+
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+  height: 2px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #edf2f7;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #cbd5e0;
+  border: 3px solid #edf2f7;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a0aec0;
+}
